#pragma once
#include "../CoW.h"
#include "../Geom.h"
#include "../Tile.h"

#include <sstream>
#include <string>

class Image
{
public:
	/**
	 * Конструирует изображение заданного размера. Если размеры не являются положительными,
	 * выбрасывает исключение std::out_of_range.
	 */
	explicit Image(Size size, uint32_t color = ' ')
		: m_size(size)
		, m_color(color)
	{
		unsigned int xTilesSize = (size.width + Tile::SIZE - 1) / Tile::SIZE;
		unsigned int yTilesSize = (size.height + Tile::SIZE - 1) / Tile::SIZE;

		m_tiles = std::vector(xTilesSize, std::vector(yTilesSize, CoW(Tile(color))));
	}

	// Возвращает размер изображения в пикселях.
	Size GetSize() const noexcept
	{
		return m_size;
	}

	/**
	 * Возвращает цвет пикселя в указанных координатах. Если координаты выходят за пределы
	 * изображения, возвращает 0 (черный).
	 */
	uint32_t GetPixel(Point p) const noexcept
	{
		if (!p.IsInSize(m_size))
		{
			return ' ';
		}

		int tileX = p.x / Tile::SIZE;
		int tileY = p.y / Tile::SIZE;
		int pixelX = p.x % Tile::SIZE;
		int pixelY = p.y % Tile::SIZE;

		return m_tiles[tileX][tileY]->GetPixel({ pixelX, pixelY });
	}

	/**
	 * Задаёт цвет пикселя в указанных координатах. Если координаты выходят за пределы изображения
	 * действие игнорируется.
	 */
	void SetPixel(Point p, uint32_t color)
	{
		if (!p.IsInSize(m_size))
		{
			return;
		}

		int tileX = p.x / Tile::SIZE;
		int tileY = p.y / Tile::SIZE;
		int pixelX = p.x % Tile::SIZE;
		int pixelY = p.y % Tile::SIZE;

		m_tiles[tileX][tileY].Write([&](Tile& tile) {
			tile.SetPixel({ pixelX, pixelY }, color);
		});
	}

private:
	Size m_size;
	uint32_t m_color;
	std::vector<std::vector<CoW<Tile>>> m_tiles;
};
